--- a/src/components/EmailForm.astro
+++ b/src/components/EmailForm.astro
@@ -33,7 +33,7 @@ import { t } from "i18next";
         class="min-w-0 flex-auto rounded-md border-0 px-3.5 py-2 text-gray-900 dark:text-gray-100 dark:bg-stone-950 shadow-sm ring-1 ring-inset ring-gray-300 dark:placeholder:text-gray-100 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
         type="email"
       />
-      <Button class="hover:!bg-[#2490EF]/80" type="submit" name="mauticform[submit]" id="mauticform_input_leadmagneten_submit" value="">
+      <Button type="submit" style="primary" name="mauticform[submit]" id="mauticform_input_leadmagneten_submit" value="">
         {t("newsletter.button_text")}
       </Button>
     </div>
