refactor: rmv border shadow

--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -25,7 +25,7 @@ const styles = {
 	primary:
 		"text-center bg-primaryBlue outline-2 dark:bg-gray-100 hover:opacity-80 dark:hover:bg-white focus-visible:bg-stone-500 dark:focus-visible:bg-gray-100 text-white dark:text-black border-transparent active:outline shadow-sm",
 	muted: "text-sm font-semibold leading-6 text-primaryBlue dark:text-gray-100",
-	nav: "text-center text-stone-950 outline-2 dark:text-white hover:bg-gray-200 dark:hover:bg-gray-700 focus-visible:bg-stone-500 dark:focus-visible:bg-gray-100 border-transparent active:outline shadow-sm",
+	nav: "text-center text-stone-950 outline-2 dark:text-white hover:bg-gray-200 dark:hover:bg-gray-700 focus-visible:bg-stone-500 dark:focus-visible:bg-gray-100 border-transparent active:outline",
 
 	hover: "text-center text-stone-950 hover:text-primaryBlue focus:text-primaryBlue focus:bg-gray-200 focus:outline-none focus:shadow-outline hover:bg-gray-200 dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-primaryBlue dark:text-primaryBlue",
 };
