--- a/src/components/LetsTalkhu.astro
+++ b/src/components/LetsTalkhu.astro
@@ -2,10 +2,10 @@
 import Link from "@components/ui/link.astro";
 ---
 
-<section class="py-8 items-center px-4 bg-[#EEF0F2] dark:bg-[#020616] rounded-xl flex justify-between w-full">
+<section class="py-8 items-center px-4 bg-[#EEF0F2] dark:bg-[#1F2937] rounded-xl flex justify-between w-full">
   <div>
     <h2 class="my-3 text-[30px] dark:text-white text-[#192734] font-bold">Nincs másik szoftverre szükség.</h2>
     <span class="text-[#192734] dark:text-white">A Monolithon gyorsan szállítja a legjobb megoldást.</span>
   </div>
-  <Link href="/hu/kapcsolat/" class="dark:text-white cursor-pointer text-2xl mr-2 font-semibold text-gray-700">Beszéljünk!</Link>
+  <Link href="/hu/kapcsolat/" style="primary">Beszéljünk!</Link>
 </section>
