[NEW] nav menu and gocardless hu page

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -10,14 +10,17 @@ const logo = "logo.title";
 
 export const menuitems = [
 	{
-		title: "ERP",
+		title: "ERPNext",
 		children: [
 			{ title: "ERPNext", path: "path_header.erpnext" },
 			{ title: "header.implementation", path: "path_header.implementation" },
 			{ title: "header.invoicing", path: "path_header.invoicing" },
 			{ title: "header.accounting", path: "path_header.accounting" },
-			{ title: "header.odoo", path: "path_header.odoo" },
 		],
+	},
+	{
+		title: "header.odoo",
+		path: "path_header.odoo",
 	},
 	{
 		title: "header.cms_eCommerce",
