[FIX] nav menu and page structure

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -12,10 +12,12 @@ export const menuitems = [
 	{
 		title: "ERPNext",
 		children: [
-			{ title: "ERPNext", path: "path_header.erpnext" },
+			{ title: "header.erpnext", path: "path_header.erpnext" },
+			{ title: "header.hosting", path: "path_header.hosting" },
 			{ title: "header.implementation", path: "path_header.implementation" },
 			{ title: "header.invoicing", path: "path_header.invoicing" },
 			{ title: "header.accounting", path: "path_header.accounting" },
+			{ title: "header.gocardless", path: "path_header.gocardless" },
 		],
 	},
 	{
@@ -25,9 +27,9 @@ export const menuitems = [
 	{
 		title: "header.cms_eCommerce",
 		children: [
+			{ title: "Astro.build", path: "path_header.astro" },
 			{ title: "VueStoreFront", path: "path_header.vue-storefront" },
 			{ title: "Shopify", path: "path_header.shopify" },
-			{ title: "Astro.build", path: "path_header.astro" },
 		],
 	},
 	{
