--- a/src/pages/hu/uzemeltetes.astro
+++ b/src/pages/hu/uzemeltetes.astro
@@ -6,12 +6,12 @@ import Layout from "@layouts/Layout.astro";
 changeLanguage("hu");
 ---
 
-<Layout lang="en" title="Üzemeltetés">
+<Layout lang="en" title="ERPNext tárhely és üzemeltetés">
 	<Container>
 		<div class="py-20 text-[#192734] dark:text-white">
 			<div>
 				<h1 class="md:text-[60px] mb-10 text-4xl font-semibold">Üzemeltetés</h1>
-				<p class="md:text-[40px] text-2xl font-semibold mb-10">ERPNext üzemeltetése a felhőben</p>
+				<p class="md:text-[40px] text-2xl font-semibold mb-10">ERPNext tárhely a felhőben</p>
 				<div>
 					<img src="/images/frappecloud-banner.jpg" alt="" />
 				</div>
