--- a/src/pages/erpnext.astro
+++ b/src/pages/erpnext.astro
@@ -14,7 +14,7 @@ changeLanguage("en");
       <div class="flex justify-between items-center h-[70vh]">
         <div class="flex flex-col h-full justify-center">
           <h1 class="text-[60px] leading-none font-semibold text-[#192734] dark:text-white">Monolithon is the solid foundation.</h1>
-          <h2 class="text-xl text-gray-500 my-4 dark:text-white">ERPNext and Frappe in English.</h2>
+          <h2 class="text-xl text-gray-500 my-4 dark:text-white">ERPNext and Frappe knowledge.</h2>
           <div>
             <Link href="/contact/" style="primary">Let's Talk!</Link>
           </div>
