--- a/src/pages/accounting.astro
+++ b/src/pages/accounting.astro
@@ -2,7 +2,7 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import LetsTalk from "@components/LetsTalk.astro";
+import NewsLetter from "@components/EmailForm.astro";
 changeLanguage("en");
 ---
 
@@ -81,7 +81,9 @@ changeLanguage("en");
 					</p>
 				</section>
 			</div>
-			<LetsTalk/>
+			<section id="contact-form-2">
+				<NewsLetter />
+				</section>
 		</div>
 	</Container>
 </Layout>
