--- a/src/pages/erpnext-hosting.astro
+++ b/src/pages/erpnext-hosting.astro
@@ -2,31 +2,44 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-
+import NewsLetter from "@components/EmailForm.astro";
+import Link from "@components/ui/link.astro";
 changeLanguage("en");
 ---
 
-<Layout lang="en" title="Implementation">
+<Layout lang="en" title="ERPNext Hosting">
 	<Container>
-		<div class="py-20 dark:bg-stone-900">
-			<h1 class="md:text-[60px] mb-10 text-4xl font-semibold dark:text-white text-[#1F2634]">ERPNext & Frappe Hosting</h1>
-			<p class="md:text-[40px] text-2xl font-semibold dark:text-white text-[#1F2634]">ERPNext hosting in the Cloud</p>
-			<div>
-				<img src="/images/frappecloud-banner.jpg" alt="" />
+		<div class="px-5">
+			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
+				<div class="flex flex-col h-full justify-center">
+					<h1 class="text-[60px] leading-none font-semibold">ERPNext & Frappe Hosting</h1>
+					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext hosting in the Cloud</h2>
+				<div>
+					<Link href="/contact/">
+						Lets Talk!
+					</Link>
+				</div>
+				</div>
+				<div>
+					<img class="w-[40vw]" src="/images/ERPNext-hosting.jpg" alt="" />
+				</div>
 			</div>
-			<div>
-				<p class="text-lg mt-20 dark:text-white text-[#1F2634]">
-					ERPNext hosting requires expertise and specific technical conditions. After years of collaboration with various partners,
-					we have found an ERPNext provider we happily recommend. ERPNext cannot be hosted on shared hosting, and managed VPS and server
-					services usually belong to higher price categories. Therefore, we are pleased to introduce the ERPNext cloud service, where
-					monolithon.com, the popular Hungarian ERPNext promotion site, is also hosted.
-					<span class="inline-block py-10">
-						The Frappe Cloud, developed, operated, and optimized by ERPNext developers, is, in our opinion, the best ERPNext hosting
-						service, and that's why we recommend and use it:
-					</span>
-					Details and registration: <a href="https://frappecloud.com/" target="_blank" class="text-[#50A6F2]">https://frappecloud.com</a>
-				</p>
-			</div>
+<div class="flex flex-col items-center">
+    <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+        <h2 class="font-bold text-3xl mb-10">Convinient ERPNext & Frappe managed or self-service hosting</h2>
+        <p class="text-lg mt-20 dark:text-white text-[#1F2634]">
+            ERPNext hosting requires expertise and specific technical conditions. After years of collaboration with various partners,
+            we have found an ERPNext provider we happily recommend. ERPNext cannot be hosted on shared hosting, and managed VPS and server
+            services usually belong to higher price categories. Therefore, we are pleased to introduce the ERPNext cloud service, where
+            monolithon.com, the popular Hungarian ERPNext promotion site, is also hosted.
+            <br><br>
+                The Frappe Cloud, developed, operated, and optimized by ERPNext developers, is, in our opinion, the best ERPNext hosting
+                service, and that's why we recommend and use it:
+    </section>
+    <section id="contact-form-2">
+        <NewsLetter />
+    </section>
+</div>
 		</div>
 	</Container>
 </Layout>
