--- a/src/pages/hu/erpnext.astro
+++ b/src/pages/hu/erpnext.astro
@@ -2,8 +2,7 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import LetsTalk from "@components/LetsTalkhu.astro";
-import Button from "@components/ui/button.astro";
+import NewsLetter from "@components/EmailFormhu.astro";
 import Link from "@components/ui/link.astro";
 changeLanguage("hu");
 ---
@@ -14,7 +13,7 @@ changeLanguage("hu");
 			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
 				<div class="flex flex-col h-full justify-center">
 					<h1 class="text-[60px] leading-none font-semibold">Monolithon a biztos alap.</h1>
-					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext és Frappe angolul.</h2>
+					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext és Frappe magyarul.</h2>
 				<div>
 						<Link href="/contact/" style="primary">Beszéljünk!</Link>
 				</div>
@@ -46,7 +45,7 @@ changeLanguage("hu");
 					</p>
 				</section>
 
-				<LetsTalk/>
+				<NewsLetter />
 			</div>
 		</div>
 	</Container>
