--- a/src/pages/erpnext-hosting.astro
+++ b/src/pages/erpnext-hosting.astro
@@ -34,7 +34,7 @@ changeLanguage("en");
             monolithon.com, the popular Hungarian ERPNext promotion site, is also hosted.
             <br><br>
                 The Frappe Cloud, developed, operated, and optimized by ERPNext developers, is, in our opinion, the best ERPNext hosting
-                service, and that's why we recommend and use it:
+                service, and that's why we recommend and use it. 
     </section>
     <section id="contact-form-2">
         <NewsLetter />
