--- a/src/pages/hu/szamlazas.astro
+++ b/src/pages/hu/szamlazas.astro
@@ -3,26 +3,43 @@ import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
 import NewsLetter from "@components/EmailFormhu.astro";
-
+import Link from "@components/ui/link.astro";
 changeLanguage("hu");
 ---
 
-<Layout lang="hu" title="Üzemeltetés">
+<Layout lang="hu" title="ERPNext számlázás magyarul">
 	<Container>
-		<div class="py-20 px-10 md:px-0 text-[#192734] dark:text-white">
-			<h1 class="md:text-[60px] mb-10 text-4xl font-semibold">Számlázás</h1>
-			<p class="md:text-[40px] text-2xl font-semibold">ERPNext magyar számlázás hamarosan - 2024 Q1</p>
-			<div>
-				<p class=" text-xl py-10">A magyar szabályoknak megfelelő számla kiállítását az ERPNext rendszerből hamarosan elérhetővé tesszük.			</p>
+		<div class="px-5">
+			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
+				<div class="flex flex-col h-full justify-center">
+					<h1 class="text-[60px] leading-none font-semibold">ERPNext számlázás</h1>
+					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext magyar számlázás hamarosan - 2024 Q1</h2>
+				<div>
+					<Link href="/hu/kapcsolat">
+						Beszéljünk!
+					</Link>
+				</div>
+				</div>
+				<div>
+					<img class="w-[40vw]" src="/images/ERPNext-magyar-szamlazas.jpg" alt="ERPNext számlázás" />
+				</div>
+			</div>
+			<div class="flex flex-col items-center">
+				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+					<h2 class="font-bold text-3xl mb-10">ERPNext számlázás magyarul</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5]">
+						<p class=" text-xl py-10">A magyar szabályoknak megfelelő számla kiállítását az ERPNext rendszerből hamarosan elérhetővé tesszük.			</p>
 				<img src="/images/IyzD8FB.png" alt="" />
-			</div>
-			<div>
+			
 				<p class=" text-xl py-10">Ráadásul nem csak hagyományos számlázóként, hanem pénztárgépként is használható lesz az ERPNext.				</p>
-				<img src="/images/S1Fzpjh.png" alt="" />
+				<img src="/images/S1Fzpjh.png" alt="" />	
+				</section>
+
+			
+				<section id="contact-form-2">
+					<NewsLetter />
+				  </section>
 			</div>
-			<section id="contact-form-2">
-				<NewsLetter />
-			  </section>
 		</div>
 	</Container>
 </Layout>
