refactor: added a let talk line in email form

--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -1,6 +1,7 @@
 ---
 import { BlogPostSection } from  "@components/BlogPostSection";
 import NewsLetter from "@components/EmailForm.astro";
+import LetsTalk from "./LetsTalk.astro";
 const { page } = Astro.props;
 ---
 
