--- a/src/components/EmailFormhu.astro
+++ b/src/components/EmailFormhu.astro
@@ -1,8 +1,14 @@
 ---
 import Button from "@components/ui/button.astro";
 import { t } from "i18next";
+import Link from "./ui/link.astro";
 ---
 
+<div class="mx-auto max-w-3xl mt-4 dark:text-white">
+  <span>
+    Felmerült valamilyen kérdésed? <Link style="underline" size="xs"  href="/hu/kapcsolat">Beszéljünk!</Link>
+  </span>
+</div>
 <div class="mx-auto grid max-w-5xl mt-4 md:mt-12 grid-cols-1 gap-10 px-6 lg:grid-cols-12 lg:gap-8 lg:px-8 border shadow-md p-5 rounded-lg">
   <div class="max-w-xl tracking-tight text-gray-900 dark:text-gray-200 lg:col-span-7">
     <h3 class="sm:block lg:inline xl:block text-xl sm:text-2xl">
