--- a/src/components/EmailForm.astro
+++ b/src/components/EmailForm.astro
@@ -6,7 +6,7 @@ import Link from "./ui/link.astro";
 
   <div class="mx-auto max-w-3xl mt-4 dark:text-white">
     <span>
-      Do you have any questions? <Link style="underline" size="xs"  href="/contact">Let's talk!</Link>
+      Do you have any questions? <Link style="underline"  href="/contact">Let's talk!</Link>
     </span>
   </div>
 <div class="mx-auto grid max-w-5xl mt-4 md:mt-12 grid-cols-1 gap-10 px-6 lg:grid-cols-12 lg:gap-8 lg:px-8 border shadow-md p-5 rounded-lg">
