--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -88,7 +88,7 @@ const { page } = Astro.props;
 <section id="contact-form-2">
   <NewsLetter />
 </section>
-<section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4">
+<section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4 mt-16">
   <h3 class="sm:block lg:inline xl:block text-lg sm:text-lg text-center w-full wordBreak">
     Legfrissebb írásaink <b>ERPNext, Frappe</b> és egyéb témákban
   </h3>
