--- a/src/components/EmailFormhu.astro
+++ b/src/components/EmailFormhu.astro
@@ -5,7 +5,7 @@ import Link from "./ui/link.astro";
 ---
 
 <div class="mx-auto max-w-3xl mt-4 dark:text-white">
-  <span>
+  <span class="text-lg">
     Felmerült valamilyen kérdésed? <Link style="underline"  href="/hu/kapcsolat">Beszéljünk!</Link>
   </span>
 </div>
