refactor: margin fix for lets talk sentence

--- a/src/components/EmailFormhu.astro
+++ b/src/components/EmailFormhu.astro
@@ -4,7 +4,7 @@ import { t } from "i18next";
 import Link from "./ui/link.astro";
 ---
 
-<div class="mx-auto max-w-3xl mt-4 dark:text-white">
+<div class="mx-auto max-w-[46rem] mt-4 dark:text-white">
   <span class="text-lg">
     Felmerült valamilyen kérdésed? <Link style="underline"  href="/hu/kapcsolat">Beszéljünk!</Link>
   </span>
