--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -44,7 +44,7 @@ const { page } = Astro.props;
   <NewsLetter />
 </section>
 <section id="description">
-  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 max-w-3xl text-black">
+  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2  text-black">
     <p>
       We are certain that <b>software offers the fastest route to learning and implementing best practices</b> in your business (and your personal life
       as well).
