--- a/src/components/EmailForm.astro
+++ b/src/components/EmailForm.astro
@@ -4,7 +4,7 @@ import { t } from "i18next";
 import Link from "./ui/link.astro";
 ---
 
-  <div class="mx-auto max-w-3xl mt-4 dark:text-white">
+  <div class="mx-auto max-w-[46rem] mt-4 dark:text-white">
     <span class="text-lg">
       Do you have any questions? <Link style="underline" size="xs" href="/contact">Let's talk!</Link>
     </span>
