--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -43,7 +43,7 @@ const { page } = Astro.props;
   <NewsLetter />
 </section>
 <section id="description">
-  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 max-w-3xl text-black">
+  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 text-black">
     <p>
       Tudjuk, hogy a megfelelő szoftver használatával lehet a leggyrosabban a legjobb és legújabb <b>üzleti gyakorlatokat megtanulni és alkalmazni</b>
       bármilyen szervezetben (és a személyes életben egyaránt).
