--- a/src/pages/hu/bevezetes.astro
+++ b/src/pages/hu/bevezetes.astro
@@ -28,7 +28,11 @@ changeLanguage("hu");
 				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">ERPNext ERP bevezetése a gyakorlatban</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
-							
+					Minden üzlet egyforma, legalábbis abban a tekintetben, hogy ezt a játékot profitra játszák. Persze vanna különbségek országok, iparágak és vállalkozások között, de az alapvető folyamatok általában nagyon hasonlóak. Ezért is célszerű egy ERP bevezetése kapcsán a saját folyamatainkat felülvizsgálni, mert lehet, hogy azok nem a legoptimálisabbak. 
+					Sőt, a különböző ERP renszerekből, mint az ERPNext akár az általános, máshol bevált jógyakorlatot is elleshetjük és alkalmazhatjuk. 
+						<br><br>
+					Ha tudunk a meglévő keretekhez igazodni, akkor sokkal könnyebb dolgunk van, de teremészetesen az ERPNext testreszabásásával még jobban tudjuk támogatni a vállalkozások napi működését. 
+						<br><br>
 				</section>
 
 			
