--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -1,6 +1,7 @@
 ---
 import { BlogPostSection } from  "@components/BlogPostSection";
 import NewsLetter from "@components/EmailForm.astro";
+import LetsTalk from "./LetsTalk.astro";
 const { page } = Astro.props;
 ---
 
@@ -43,7 +44,7 @@ const { page } = Astro.props;
   <NewsLetter />
 </section>
 <section id="description">
-  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 max-w-3xl text-black">
+  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2  text-black">
     <p>
       We are certain that <b>software offers the fastest route to learning and implementing best practices</b> in your business (and your personal life
       as well).
@@ -84,7 +85,7 @@ const { page } = Astro.props;
 <section id="contact-form-2">
   <NewsLetter />
 </section>
-<section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4">
+<section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4 mt-16">
   <h3 class="sm:block lg:inline xl:block text-lg sm:text-lg text-center w-full wordBreak">
     Our latest blog post on <b>ERPNext, Frappe</b> and more
   </h3>
