--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -43,7 +43,7 @@ const { page } = Astro.props;
   <NewsLetter />
 </section>
 <section id="description">
-  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 max-w-3xl text-black">
+  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 text-black">
     <p>
       Tudjuk, hogy a megfelelő szoftver használatával lehet a leggyrosabban a legjobb és legújabb <b>üzleti gyakorlatokat megtanulni és alkalmazni</b>
       bármilyen szervezetben (és a személyes életben egyaránt).
@@ -88,7 +88,7 @@ const { page } = Astro.props;
 <section id="contact-form-2">
   <NewsLetter />
 </section>
-<section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4">
+<section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4 mt-16">
   <h3 class="sm:block lg:inline xl:block text-lg sm:text-lg text-center w-full wordBreak">
     Legfrissebb írásaink <b>ERPNext, Frappe</b> és egyéb témákban
   </h3>
