--- a/src/pages/implementation.astro
+++ b/src/pages/implementation.astro
@@ -2,9 +2,9 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import NewsLetter from "@components/EmailFormhu.astro";
+import NewsLetter from "@components/EmailForm.astro";
 import Link from "@components/ui/link.astro";
-changeLanguage("hu");
+changeLanguage("en");
 ---
 
 <Layout lang="en" title="Implementation and Support for ERPNext">
