--- a/src/pages/invoicing.astro
+++ b/src/pages/invoicing.astro
@@ -4,10 +4,10 @@ import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
 import NewsLetter from "@components/EmailForm.astro";
 import Link from "@components/ui/link.astro";
-changeLanguage("hu");
+changeLanguage("en");
 ---
 
-<Layout lang="hu" title="ERPNext bevezetés és támogatás">
+<Layout lang="en" title="ERPNext bevezetés és támogatás">
 	<Container>
 		<div class="px-5">
 			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
