--- a/src/pages/hu/uzemeltetes.astro
+++ b/src/pages/hu/uzemeltetes.astro
@@ -21,7 +21,7 @@ changeLanguage("hu");
 				</div>
 				</div>
 				<div>
-					<img class="w-[40vw]" src="/images/ERPNext-hosting.jpg" alt="" />
+					<img class="w-[40vw]" src="/images/erpnext-hosting.png" alt="" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
