--- a/src/pages/invoicing.astro
+++ b/src/pages/invoicing.astro
@@ -16,7 +16,7 @@ changeLanguage("en");
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Hungarian Invoicing with ERPNext - Coming Soon in 2024 Q1</h2>
 				<div>
 					<Link href="/hu/kapcsolat">
-						Beszéljünk!
+						Let's talk!
 					</Link>
 				</div>
 				</div>
