--- a/src/pages/queue-management-system.astro
+++ b/src/pages/queue-management-system.astro
@@ -42,12 +42,12 @@ const pricingData = [
 ];
 ---
 
-<Layout title="Customer Call, Guest Call, Queue Management Kiosk, Customer Management System" lang="en">
+<Layout title="Queue Management Kiosk, Customer Management System" lang="en">
   <Container>
     <div class="px-5">
       <div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
         <div class="flex flex-col h-full justify-center">
-          <h1 class="text-[60px] leading-none font-semibold">Customer Call, Queue Management Kiosk System.</h1>
+          <h1 class="text-[60px] leading-none font-semibold">Queue Management Kiosk System.</h1>
           <h2 class="text-xl text-[#192734] dark:text-white my-4">For Hotels and Hostels.</h2>
           <a href="#pricing">
             <Button class="md:px-3 md:py-2 leading-6" style="primary">Plans</Button>
@@ -71,12 +71,12 @@ const pricingData = [
         <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
           <h2 class="font-bold text-3xl mb-10">Enhancing Customer Experience Made Easy</h2>
           <p class="list-disc text-[17px] leading-7 space-y-5]">
-            With our customer call and queue management system, you can eliminate the line not only in front of the reception but also incorporate it
+            With our queue management system, you can eliminate the line not only in front of the reception but also incorporate it
             into the aforementioned digital user journey, differentiating yourself from competitors by offering queue-free check-ins and potentially
             increasing booking conversions. Instead of standing in line, we can seat our guests, which is crucial in this industry, especially after a
             long journey. Waiting time cannot be completely eliminated due to limited reception capacity, but the conditions in which guests wait make
             a significant difference. This is their first personal experience with our brand, and communication is key in every situation. Thanks to
-            the customer call and queue management kiosk, guests don't have to spend their initial moments in our hostel or hotel in uncertainty and
+            the queue management kiosk, guests don't have to spend their initial moments in our hostel or hotel in uncertainty and
             discomfort. They already know how the check-in process will proceed and when they can expect their turn. They can use this waiting time to
             their liking, making the customer service more interactive and engaging.
           </p>
@@ -91,7 +91,7 @@ const pricingData = [
             display), it can also be done through mobile messages, opening up the opportunity to send further messages while the guest is on-site or
             even after they leave. According to our calculations, the system can quickly pay for itself even without these extra revenues, thanks to
             precise statistics that enable us to evaluate the performance of receptionists and plan capacity. Due to the rapid advancement of
-            technology and cost reduction, it's now possible to introduce a customer call system in various areas without a significant investment.
+            technology and cost reduction, it's now possible to introduce a queue management system in various areas without a significant investment.
           </p>
         </section>
       </div>
