[FIX] blog categories and tags

--- a/src/pages/blog/tag/[tag].astro
+++ b/src/pages/blog/tag/[tag].astro
@@ -39,7 +39,7 @@ const { posts, tag, lang } = Astro.props;
 	<Container>
 		<Sectionhead>
 			<Fragment slot="title">#{tag}</Fragment>
-			<Fragment slot="desc">ERPNext and Frappe news for beginners and advanced users.</Fragment>
+			<Fragment slot="desc">ERPNext, Frappe and Odoo news for beginners and advanced users.</Fragment>
 		</Sectionhead>
 		<Posts posts={posts} />
 	</Container>
