--- a/src/pages/hu/blog/category/[category].astro
+++ b/src/pages/hu/blog/category/[category].astro
@@ -39,7 +39,7 @@ const { posts, category, lang } = Astro.props;
 <Layout title={`Category - ${category}`} lang="hu">
 	<Container>
 		<Sectionhead>
-            <Fragment slot="title">#{category.replace(/-/g, " ")}</Fragment>
+            <Fragment slot="title">{category.replace(/-/g, " ")}</Fragment>
             <Fragment slot="desc">ERPNext, Frappe és Odoo hírek mindenkinek.
             </Fragment>
 		</Sectionhead>
