--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -6,15 +6,15 @@ const footerDetails = 'footer.details'
 export const menuitems = [
 	{
 		title: "ERPNext ",
-		path: "/"
-	},
-	{
-		title: "footer.login",
-		path: "path_footer.login",
+		path: "/erpnext"
 	},
 	{
 		title: "footer.monolithon",
 		path: "path_footer.monolithon",
+	},
+	{
+		title: "footer.login",
+		path: "path_footer.login",
 	},
 	{
 		title: "footer.support",
