--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -90,7 +90,7 @@ const { page } = Astro.props;
 </section>
 <section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4 mt-16">
   <h3 class="sm:block lg:inline xl:block text-lg sm:text-lg text-center w-full wordBreak">
-    Legfrissebb írásaink <b>ERPNext, Frappe</b> és egyéb témákban
+    Legfrissebb írásaink <b>ERPNext, Frappe, Odoo</b> és egyéb témákban
   </h3>
 </section>
 <section id="blog">
