--- a/src/pages/hu/blog/category/[category].astro
+++ b/src/pages/hu/blog/category/[category].astro
@@ -40,7 +40,7 @@ const { posts, category, lang } = Astro.props;
 	<Container>
 		<Sectionhead>
             <Fragment slot="title">{category.replace(/-/g, " ")}</Fragment>
-            <Fragment slot="desc">ERPNext, Frappe és Odoo hírek mindenkinek.
+            <Fragment slot="desc">ERPNext, Frappe, Odoo és egyéb hírek mindenkinek.
             </Fragment>
 		</Sectionhead>
 		<Posts posts={posts} />
