--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -87,7 +87,7 @@ const { page } = Astro.props;
 </section>
 <section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4 mt-16">
   <h3 class="sm:block lg:inline xl:block text-lg sm:text-lg text-center w-full wordBreak">
-    Our latest blog post on <b>ERPNext, Frappe</b> and more
+    Our latest blog post on <b>ERPNext, Frappe, Odoo</b> and more
   </h3>
 </section>
 <section id="blog">
