--- a/src/pages/hu/blog/tag/[tag].astro
+++ b/src/pages/hu/blog/tag/[tag].astro
@@ -39,7 +39,7 @@ const { posts, tag, lang } = Astro.props;
 	<Container>
 		<Sectionhead>
             <Fragment slot="title">#{tag.replace(/-/g, " ")}</Fragment>
-            <Fragment slot="desc">ERPNext, Frappe és Odoo hírek mindenkinek.
+            <Fragment slot="desc">ERPNext, Frappe, Odoo és egyéb hírek mindenkinek.
             </Fragment>
 		</Sectionhead>
 		<Posts posts={posts} />
