--- a/src/pages/hu/static-site-generator.astro
+++ b/src/pages/hu/static-site-generator.astro
@@ -12,7 +12,7 @@ changeLanguage("hu");
 		<div class="px-5">
 			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
 				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">Gyors weboldal.</h1>
+					<h1 class="text-[60px] leading-none font-semibold">Gyors weboldal</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">A látogatóknak és a Google-nek.</h2>
 				<div>
 					<Link href="/hu/kapcsolat">
