--- a/src/pages/frappe-framework.astro
+++ b/src/pages/frappe-framework.astro
@@ -11,7 +11,7 @@ changeLanguage("en");
         <div class="px-5">
             <div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
                 <div class="flex flex-col h-full justify-center">
-                    <h1 class="text-[60px] leading-none font-semibold">Frappe Framework.</h1>
+                    <h1 class="text-[60px] leading-none font-semibold">Frappe Framework</h1>
                     <h2 class="text-xl text-[#192734] dark:text-white my-4">No code, low code framework for rapid development.</h2>
                     <div>
                         <Link href="/contact">
