--- a/src/pages/hu/erpnext.astro
+++ b/src/pages/hu/erpnext.astro
@@ -12,7 +12,7 @@ changeLanguage("hu");
 		<div class="px-5">
 			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
 				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">Monolithon a biztos alap.</h1>
+					<h1 class="text-[60px] leading-none font-semibold">Monolithon a biztos alap</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext és Frappe magyarul.</h2>
 				<div>
 						<Link href="/contact/" style="primary">Beszéljünk!</Link>
