--- a/src/pages/n8n-zapier-make-integromat.astro
+++ b/src/pages/n8n-zapier-make-integromat.astro
@@ -12,7 +12,7 @@ changeLanguage("en");
 		<div class="px-5">
 			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
 				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">n8n the missing piece.</h1>
+					<h1 class="text-[60px] leading-none font-semibold">n8n the missing piece</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Be up to date on everything.</h2>
 				<div>
 					<Link href="/contact/">
