--- a/src/pages/odoo-erp.astro
+++ b/src/pages/odoo-erp.astro
@@ -12,7 +12,7 @@ changeLanguage("en");
 		<div class="px-5">
 			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
 				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">Odoo more than an ERP.</h1>
+					<h1 class="text-[60px] leading-none font-semibold">Odoo more than an ERP</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Simplify Business Processes.</h2>
 				<div>
 					<Link href="/contact/">
