[FIX] invoicing CTO

--- a/src/pages/invoicing.astro
+++ b/src/pages/invoicing.astro
@@ -15,7 +15,7 @@ changeLanguage("en");
 					<h1 class="text-[60px] leading-none font-semibold">ERPNext invoicing</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Hungarian Invoicing with ERPNext - Coming Soon in 2024 Q1</h2>
 				<div>
-					<Link href="/hu/kapcsolat">
+					<Link href="/contact">
 						Let's talk!
 					</Link>
 				</div>
