--- a/src/pages/hu/blog/[slug].astro
+++ b/src/pages/hu/blog/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import i18next, { changeLanguage } from "i18next";
+import i18next, { changeLanguage,t } from "i18next";
 import { getCollection } from "astro:content";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
@@ -77,7 +77,7 @@ const readTime = getArticleReadingTime(post.body);
 			<a href={localizePath("/blog/")}>
 				<div class="flex flex-row align-middle justify-center dark:text-stone-200">
 					<Icon name="tabler:chevron-left" class="w-6 h-6" />
-					<p class="ml-2">Back to blog</p>
+					<p class="ml-2">{t("blog.back_to")}</p>
 				</div>
 			</a>
 		</div>
