--- a/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
+++ b/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
@@ -45,21 +45,21 @@ const pricingData = [
 
 <Layout title="Ügyfélhívó, vendéghívó, sorszámosztó kiosk, ügyfélirányító rendszer" lang="hu">
   <Container>
-    <div class="px-5">
-      <div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
+    <div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
         <div class="flex flex-col h-full justify-center">
-          <h1 class="text-[60px] leading-none font-semibold">Ügyfélhívó, sorszámosztó kiosk renszer</h1>
+          <h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">Ügyfélhívó, sorszámosztó kiosk renszer</h1>
           <h2 class="text-xl text-[#192734] dark:text-white my-4">Hotelek és hostelek részére.</h2>
           <a href="#pricing">
             <Button class="md:px-3 md:py-2 leading-6" style="primary">Csomagok</Button>
           </a>
         </div>
-        <div>
-          <img class="w-[40vw]" src="/images/qms.jpg" alt="" />
+        <div class="mt-10 md:mt-0">
+          <img class="w-full" src="/images/qms.jpg" alt="" />
         </div>
       </div>
       <div class="flex flex-col items-center">
-        <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+        <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
           <h2 class="font-bold text-3xl mb-10">Nincs többé felesleges sorbanállás</h2>
           <p class="list-disc text-[17px] leading-7 space-y-5]">
             Senki sem szeret sorbanállni. Főleg, egy hosszú út után. És egy hotelbe vagy hostelbe érkező vendég általában hosszú utat tett meg, mire
@@ -68,8 +68,9 @@ const pricingData = [
             visszajezés, ajánlás, értékelés gyűjtésével és további ajánlatokkal tudunk elősegíteni, természetesen a minőségi szolgáltatás nyújtása
             mellett.
           </p>
+        </section>
 
-          <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+          <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
             <h2 class="font-bold text-3xl mb-10">Ügyfélélmény emelése egyszerűen</h2>
             <p class="list-disc text-[17px] leading-7 space-y-5]">
               Ügyfélhívó és sorszámosztó rendszerünkkel nem csupán a recepció előtti sort lehet felszámolni, hanem az előbb említett digitális user
@@ -84,7 +85,7 @@ const pricingData = [
               megfelelő dolgokkal töltheti. Mindezt játékossággal kiegészítve új szintre emeljük az ügyfélkiszolgálást.
             </p>
           </section>
-          <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+          <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
             <h2 class="font-bold text-3xl mb-10">Nem csak költséget csökkent, plusz bevételt is termel</h2>
             <p class="list-disc text-[17px] leading-7 space-y-5]">
               Kényelmet, időt adunk ezzel vendégeinknek, de az ügyfélélmény tovább fokozható, ami ráadásul az elégedett, visszatérő vendégen túl,
@@ -101,7 +102,6 @@ const pricingData = [
               és használni a különböző területeken.
             </p>
           </section>
-        </section>
       </div>
       <Sectionhead>
         <Fragment slot="title">Csomagok</Fragment>
