--- a/src/pages/queue-management-system.astro
+++ b/src/pages/queue-management-system.astro
@@ -44,21 +44,21 @@ const pricingData = [
 
 <Layout title="Queue Management Kiosk, Customer Management System" lang="en">
   <Container>
-    <div class="px-5">
-      <div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
+    <div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
         <div class="flex flex-col h-full justify-center">
-          <h1 class="text-[60px] leading-none font-semibold">Queue Management Kiosk System.</h1>
+          <h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">Queue Manag&shy;ement Kiosk System.</h1>
           <h2 class="text-xl text-[#192734] dark:text-white my-4">For Hotels and Hostels.</h2>
           <a href="#pricing">
             <Button class="md:px-3 md:py-2 leading-6" style="primary">Plans</Button>
           </a>
         </div>
-        <div>
-          <img class="w-[40vw]" src="/images/qms.jpg" alt="" />
+        <div class="mt-10 md:mt-0">
+          <img class="w-full" src="/images/qms.jpg" alt="" />
         </div>
       </div>
       <div class="flex flex-col items-center">
-        <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+        <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
           <h2 class="font-bold text-3xl mb-10">No More Unnecessary Waiting in Line</h2>
           <p class="list-disc text-[17px] leading-7 space-y-5]">
             Nobody likes to wait in line, especially after a long journey. And a guest arriving at a hotel or hostel has usually traveled a long way
@@ -68,7 +68,7 @@ const pricingData = [
           </p>
         </section>
 
-        <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+        <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
           <h2 class="font-bold text-3xl mb-10">Enhancing Customer Experience Made Easy</h2>
           <p class="list-disc text-[17px] leading-7 space-y-5]">
             With our queue management system, you can eliminate the line not only in front of the reception but also incorporate it
@@ -81,7 +81,7 @@ const pricingData = [
             their liking, making the customer service more interactive and engaging.
           </p>
         </section>
-        <section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
+        <section class="py-8 px-4 md:w-2/3 text-[#192734] dark:text-white">
           <h2 class="font-bold text-3xl mb-10">Not Just Cost Savings, But Also Additional Revenue</h2>
           <p class="list-disc text-[17px] leading-7 space-y-5]">
             We provide convenience and time to our guests, but we can further enhance the customer experience, which not only satisfies and retains
