fix: implementation page alignment

--- a/src/pages/hu/uzemeltetes.astro
+++ b/src/pages/hu/uzemeltetes.astro
@@ -9,10 +9,10 @@ changeLanguage("hu");
 
 <Layout lang="hu" title="ERPNext tárhely és üzemeltetés ">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
 				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">ERPNext tárhely és üzemeltetés</h1>
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold">ERPNext tárhely és üzemeltetés</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">ERPNext tárhely a felhőben.</h2>
 				<div>
 					<Link href="/hu/kapcsolat">
@@ -20,8 +20,8 @@ changeLanguage("hu");
 					</Link>
 				</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/erpnext-hosting.png" alt="" />
+        <div class="mt-10 md:mt-0">
+					<img class="w-full" src="/images/ERPNext-implementation.jpg" alt="ERPNext Introduction" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
