--- a/src/pages/implementation.astro
+++ b/src/pages/implementation.astro
@@ -9,10 +9,10 @@ changeLanguage("en");
 
 <Layout lang="en" title="Implementation and Support for ERPNext">
 	<Container>
-		<div class="px-5">
-			<div class="flex justify-between items-center text-[#192734] dark:text-white h-[70vh]">
+		<div class="px-5 pt-10">
+      <div class="flex justify-between items-center text-[#192734] dark:text-white h-auto md:flex-row flex-col pb-12 md:pb-1">
 				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold">ERPNext Implementation</h1>
+					<h1 class="text-4xl md:text-5xl leading-none font-semibold hyphens-auto">ERPNext Implemen&shy;tation</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Step by step, with training and documentation.</h2>
 					<div>
 						<Link href="/contact">
@@ -20,8 +20,8 @@ changeLanguage("en");
 						</Link>
 					</div>
 				</div>
-				<div>
-					<img class="w-[40vw]" src="/images/ERPNext-implementation.jpg" alt="ERPNext Introduction" />
+        <div class="mt-10 md:mt-0">
+					<img class="w-full" src="/images/ERPNext-implementation.jpg" alt="ERPNext Introduction" />
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
