fix: qms page break points (#29)
* fix: qms page break points

* fix: implementation page alignment

--- a/src/components/LetsTalk.astro
+++ b/src/components/LetsTalk.astro
@@ -2,10 +2,10 @@
 import Link from "@components/ui/link.astro";
 ---
 
-<section class="py-8 items-center px-4 bg-[#EEF0F2] dark:bg-[#1F2937] rounded-xl flex justify-between w-full">
+<section class="py-8 items-center px-4 md:px-10 bg-[#EEF0F2] dark:bg-[#1F2937] rounded-xl flex justify-between w-full flex-col md:flex-row">
   <div>
     <h2 class="my-3 text-[30px] dark:text-white text-[#192734] font-bold">You don't need more business management software.</h2>
     <span class="text-[#192734] dark:text-white">Monolithon deliver the best solution for you quickly.</span>
   </div>
-  <Link href="/contact" style="primary">Let's talk!</Link>
+  <Link class="mt-8 md:mt-0" href="/contact" style="primary">Let's talk!</Link>
 </section>
